<resources>
    <string name="app_name">LumberjackRewards</string>
    <string name="title_activity_bottom_nav_bar">bottom_nav_bar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_badges">Badges</string>
    <string name="title_settings">Settings</string>
    <string name="new_screen">New Screen</string>
    <string name="manage_users_and_groups">Manage Users and Groups</string>
    <string name="remove">Remove Badge</string>
    <string name="add">Add Badge</string>
    <string name="back">BACK</string>
    <string name="settings">Settings</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="settings_nameplate">John Workman</string>
    <string name="settings_phone_number">(123) &#8211; 456 &#8211; 8910</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="security_icon">Security Icon</string>
    <string name="security_privacy">Security &amp; Privacy</string>
    <string name="sp_description">SP More Info</string>
    <string name="text_size">Text Size</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="adjust_your_text_size">Adjust your text size!</string>
    <string name="security_amp_privacy"><![CDATA[Security & Privacy]]></string>
    <string name="security_privacy_button">Security Privacy Button</string>
    <string name="create_badge">Create Badge</string>
    <string name="badge_completion_requirements">Badge Completion Requirements</string>
    <string name="c_badge">Create Badge</string>
    <string name="randomPrivacyText">In an increasingly digital world, businesses and organizations face constantly evolving threats. Fraud, data breaches, digital privacy, and more demand not only vigilance but specific expertise to counteract. In our online Master of Legal Studies in Compliance and Risk Management program, you’ll become immersed in this rapidly evolving regulatory space and learn to make vital decisions that protect your organization and its data.</string>
    <string name="privacy_amp_security"><![CDATA[Privacy & Security]]></string>
    <string name="privacy_and_information_technology">Privacy and Information Technology</string>
    <string name="welcome">Welcome,</string>
    <string name="LumberjackRewards">LUMBERJACK REWARDS</string>
    <string name="NewsAndUpdates">News &amp; Updates</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="email">Email Address</string>
    <string name="Application_Role">Application Role</string>
    <string name="message_contents">Message Contents</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="add_a_badge">Add a Badge</string>
    <string name="badge_name">Badge Name</string>
    <string name="group_name">Group Name</string>
    <string name="badge_details">Badge Criteria</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="stem_building">STEM Building</string>
    <string name="suite_312">Suite 312</string>
    <string name="p_o_box_13063_sfa_station_nacogdoches_texas_75962">P.O. Box 13063, SFA Station Nacogdoches, Texas 75962</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="_936_468_2508">936.468.2508</string>
    <string name="phone">Phone</string>
    <string name="come_see_us">Come See Us!</string>
    <string name="todo">TODO</string>
    <string name="frequently_asked_quesitons">Frequently Asked Quesitons</string>
    <string name="manage">Manage</string>
    <string name="manage_groups">Manage Groups</string>
    <string name="manage_users">Manage Users</string>
    <string name="add_a_class">Add a Class</string>
    <string name="add_new_class">Add New Class</string>
</resources>