<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityAddBadge" >
    <!-- Top Navbar -->
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Top Navigation Bar -->
        <LinearLayout
            android:id="@+id/textSizeNavBar"
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_401"
                tools:ignore="UselessParent">

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:src="@drawable/back_btn"
                    android:id="@+id/backButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:textColor = "@color/white"
                    android:layout_marginStart="-10dp"
                    />
                <!-- app:icon="@drawable/back_btn" -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_a_badge"
                    android:layout_centerInParent = "true"
                    android:textColor = "@color/white"
                    android:textStyle= "bold"
                    android:textSize = "18sp"
                    android:visibility="visible"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="48dp"
        android:layout_height="match_parent"
        android:background="@color/purple_339"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etAddBadgeName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor = "@color/black"
            android:textSize = "18sp"
            android:visibility="visible"
            android:background="@drawable/custom_input"
            android:layout_marginBottom="15dp"
            android:inputType="textPersonName"
            android:text="@string/badge_name"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:backgroundTint="@color/white"
            android:selectAllOnFocus="true"/>

        <EditText
            android:id="@+id/etAddGroupName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_input"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:selectAllOnFocus="true"
            android:text="@string/group_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/etAddBadgeDescription"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:backgroundTint="@color/white"
            android:gravity="top"
            android:text="@string/badge_completion_requirements"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddBadgeSubmit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_back_secondary_200"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    app:menu="@menu/bottom_nav_menu"/>
</RelativeLayout>