<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityManage" >
    <!-- Top Navbar -->
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Top Navigation Bar -->
        <LinearLayout
            android:id="@+id/textSizeNavBar"
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_401"
                tools:ignore="UselessParent">
                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:src="@drawable/back_btn"
                    android:id="@+id/backButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:textColor = "@color/white"
                    android:layout_marginStart="-10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage"
                    android:layout_centerInParent = "true"
                    android:textColor = "@color/white"
                    android:textStyle= "bold"
                    android:textSize = "18sp"
                    android:visibility="visible"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="48dp"
        android:layout_height="match_parent"
        android:background="@color/purple_339"
        android:orientation="vertical"
        android:padding="16dp">
        <!-- Manage classes button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnManageGroups"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_back_secondary_200"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/manage_groups"
            android:textColor="@color/black"
            android:textAllCaps="false" />
        <!-- Manage students button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnManageStudents"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_back_secondary_200"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/manage_users"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>
    <!-- navbar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"
        />
</RelativeLayout>