<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FAQ" >
    <!-- Top Navbar -->
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Top Navigation Bar -->
        <LinearLayout
            android:id="@+id/textSizeNavBar"
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <RelativeLayout
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_401"
                tools:ignore="UselessParent">
                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:src="@drawable/back_btn"
                    android:id="@+id/backButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:textColor = "@color/white"
                    android:layout_marginStart="-10dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_s"
                    android:layout_centerInParent = "true"
                    android:textColor = "@color/white"
                    android:textStyle= "bold"
                    android:textSize = "18sp"
                    android:visibility="visible"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/top"
            android:layout_marginTop="45dp"
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@color/light_grey">
            <TextView
                android:layout_height="45dp"
                android:layout_width="match_parent"
                android:text="@string/frequently_asked_quesitons"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_height="250dp"
            android:layout_marginTop="135dp"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:orientation="horizontal">
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp">
            <ExpandableListView
                android:id="@+id/expandableListViewSample"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="0.5dp"
                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />
        </RelativeLayout>
    </RelativeLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"/>
</RelativeLayout>